# doc-fun

./: .bashrc  .gitignore  CHANGELOG.md  CLAUDE.md  MIGRATION_GUIDE.md  README.md  REVOLUTIONARY_FUTURE_PROPOSAL.md  command_examples.txt  coverage.xml  doc-fun.ipynb  doc_generator.py  environment.yml  mkdocs.yml  pyproject.toml  run.py  run_tests.py  scratch.txt  terminology.yaml  test_path_formatting.py  test_perfect_readme.py  test_token_machine.py  test_token_machine_basic.py  viewer.html
.claude/agents/: arch-system-design.md  docs-sync-validator.md  github-workflow-manager.md  token_machine.yaml
.claude/commands/: cheatsheet.md  fux.md  goat.md  socrates.md  tfu.md  tuf.md  wrap.md
.github/workflows/: docs.yml  test-analysis.yml  tests.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  project_structure.md  recent_architecture_changes.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
docs/: github-test-runner.md  index.md  quality-optimization-approaches.md
docs/api/: cli.md  core.md  evaluator.md  extractors.md  index.md  plugins.md  standardizers.md
docs/design/: architecture-refactoring-plan-phase-2.md  architecture-refactoring-plan.md  claude-api-integration.md  document-standardization-feature.md  index.md  phase2-session1-analysis-report.md  phase2-session2-generator-extraction.md  token-usage-analysis.md
docs/examples/: advanced.md  basic.md  plugins.md  troubleshooting.md
docs/guides/: comparison.md  configuration.md  contributing.md  creating-plugins.md  document-standardization.md  getting-started.md  installation.md  mcp-setup.md  testing.md
docs/includes/: mkdocs.md
docs/javascripts/: mermaid.js
docs/socratese/: index.md
docs/stylesheets/: extra.css
examples/: comparison_demo.py  github_test_example.py  mpi-io.html  token_machine_usage.py
examples/parallel_python_v4/: parallel_computing_analysis_report.md  (+6 more)
my-docs/: python_data_analysis_with_pandas_analysis_report.md  python_data_analysis_with_pandas_best_compilation.html  python_data_analysis_with_pandas_compilation_report.md  python_data_analysis_with_pandas_openai_gpt4omini_temp03.html  python_data_analysis_with_pandas_openai_gpt4omini_temp03_v1.html  python_data_analysis_with_pandas_openai_gpt4omini_temp03_v2.html  python_data_analysis_with_pandas_openai_gpt4omini_temp03_v3.html  python_data_analysis_with_pandas_openai_gpt4omini_temp03_v4.html  python_data_analysis_with_pandas_openai_gpt4omini_temp03_v5.html  python_data_analysis_with_pandas_openai_gpt4omini_temp07_v1.html  python_data_analysis_with_pandas_openai_gpt4omini_temp07_v2.html  python_data_analysis_with_pandas_openai_gpt4omini_temp07_v3.html  python_data_analysis_with_pandas_openai_gpt4omini_temp07_v4.html  python_data_analysis_with_pandas_openai_gpt4omini_temp07_v5.html
output/: example_best.html  example_report.md
reference/: ROADMAP.md
scripts/: mcp_manager.py  mcp_manager.sh  start_serena.sh
site/: objects.inv  sitemap.xml
tests/: conftest.py  test_analysis_compiler.py  test_analysis_link_validator.py  test_analysis_reporter.py  test_cache.py  test_cli_commands.py  test_cli_integration.py  test_cli_integration_simple.py  test_cli_simple.py  test_cli_workflows.py  test_cli_workflows_simple.py  test_config_comprehensive.py  test_doc_generator.py  test_evaluator_comparator.py  test_evaluator_downloader.py  test_evaluator_metrics.py  test_plugin_integration.py  test_plugin_interface.py  test_plugin_manager.py  test_provider_integration.py  test_readme_generator.py  test_utils_comprehensive.py
(+84 files in other folders)
